--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(135deg, black 0%, rgb(32, 32, 32) 100%);
+  background: linear-gradient(180deg, white 0%, rgba(122, 210, 251, 0.6) 100%);
   color: white;
 }
 
